--- a/styles/components/productImgMagnify.module.scss
+++ b/styles/components/productImgMagnify.module.scss
@@ -1,17 +1,18 @@
 .product_img_container {
   max-width: 1200px;
   margin: 0 auto;
+  height: 100%;
 }
 
 .img_container {
   display: flex;
-  height: 70vh;
   gap: 10px;
 }
 .thumbnail_left {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  order: 1;
 }
 .img_container_column {
   display: flex;
@@ -64,8 +65,8 @@
 .magnified_image {
   position: absolute;
   z-index: 1000;
-  min-width: 100% !important;
-  min-height: 100% !important;
+  min-width: 300% !important;
+  max-height: 300% !important;
   object-fit: contain !important;
   background: #fff;
 }
@@ -77,6 +78,12 @@
   width: 100%; /* Allow product image to take full width */
   max-width: 80%;
   height: 80%;
+}
+.product_img {
+  width: 100% !important; /* Allow product image to take full width */
+  max-height: 100% !important;
+  max-width: 100%;
+  height: 100%;
 }
 
 /* Media Query for Mobile View */
@@ -93,9 +100,9 @@
   .thumbnail_left {
     width: 100%; /* Make the thumbnail container take full width */
     flex-direction: row; /* Arrange thumbnails in a row on mobile */
-    justify-content: space-around;
-    gap: 5px;
+    // gap: 5px;
     overflow-x: scroll; /* Allow scrolling for thumbnails */
+    order: 2;
   }
   .thumbnail_right {
     width: 100%; /* Make the thumbnail container take full width */
@@ -106,14 +113,13 @@
   }
 
   .img_wrap {
-    max-width: 100px; /* Adjust the size of thumbnails */
-    max-height: 100px;
+    max-width: 150px !important; /* Adjust the size of thumbnails */
+    max-height: 200px !important;
   }
-
-  .product_img {
-    width: 100%; /* Allow product image to take full width */
-    max-width: 100%;
-    height: 100%;
+  .img_wrap img {
+    max-width: 100% !important; /* Thumbnail inner image size */
+    max-height: 100% !important; /* Thumbnail inner image size */
+    object-fit: cover;
   }
 
   .magnified_image {
@@ -127,5 +133,17 @@
     width: 100%;
     max-width: 100%;
     height: auto;
+  }
+}
+@media (min-width: 992px) {
+  .small_img {
+    max-height: 100% !important;
+    height: 100% !important;
+  }
+  .product_img {
+    width: 100%; /* Allow product image to take full width */
+    max-width: 100%;
+    max-height: 100%;
+    height: 100% !important;
   }
 }
