--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -244,3 +244,13 @@
   background-color: #56cfe1 !important;
   border: 1px solid #56cfe1 !important;
 }
+@media (min-width: 992px) {
+  .productImgMagnify_product_img__mVrRB {
+    width: 100% !important;
+  }
+}
+@media (max-width: 992px) {
+  .productImgMagnify_small_img__8UcvF {
+    height: 100% !important;
+  }
+}
